Aggiunto Registrazione User/Account + Login + Logout
2fix: cliccare sulla selezione della sezione "Esplora" porta alla sezione "Login"

--- a/progetto-museo/src/main/resources/messages/message_EN.properties
+++ b/progetto-museo/src/main/resources/messages/message_EN.properties
@@ -1,7 +1,8 @@
 museum.name = Uffizi Museum
 
 index.explore = Explore
-index.curatore.login = Login Administrators
+index.login = Login
+index.registration = Sign Up
 index.window.title = Home - Uffizi Museum
 
 footer.home = Home
@@ -11,13 +12,45 @@ footer.changeLanguage.italian = Italian
 
 error.generic.title = An error has occurred, we apologize for the inconvenient.
 
+author = Davide Cecchetti - 506418
+
 login.curatori.username = Username
 login.curatori.password = Password
 login.curatori.hint.username = Digit your username...
 login.curatori.hint.password = Digit your password...
 login.curatori.entra = Enter
 
+registration.confirm = Confirm
+registration.name = Name
+registration.surname = Surname
+registration.username = Username
+registration.password = Password
+registration.hint.name = Digit your name...
+registration.hint.surname = Digit your surname...
+registration.hint.username = Digit your username...
+registration.hint.password = Digit your password...
+
+admin.adminHome.title = Private Administrator Area
+admin.adminHome.addOpera = Add a Work
+admin.adminHome.removeOpera = Remove a Work
+admin.adminHome.addCollezione = Add a Collection
+admin.adminHome.removeCollezione = Remove a Collection
+admin.adminHome.addArtista = Add an Artist
+admin.adminHome.removeArtista = Remove an Artist
+admin.adminHome.logout = Logout
+
+default.defaultHome.title = Private User Area
+default.defaultHome.logout = Logout
+
 page.title.index = Home - Uffizi Museum
-page.title.loginCuratori = Login - Uffizi Museum
+page.title.loginForm = Login - Uffizi Museum
 page.title.explore = Explore - Uffizi Museum
 page.title.error = Error - Uffizi Museum
+page.title.registrationForm = Sign Up - Uffizi Museum
+page.title.registrationSuccessfull = Successful Sign Up - Uffizi Museum
+page.adminHome.title = Private Administrator Area - Uffizi Museum
+page.defaultHome.title = Private User Area - Uffizi Museum
+
+explore.title = Explore - Uffizi Museum
+
+registration.successful.message = The registration was successful!
