Added Many Things
+ addOpera
+ addCollezione
+ cambio di lingua con local resolver + interceptor
- fixati molti bug

--- a/progetto-museo/src/main/resources/messages/message_US.properties
+++ b/progetto-museo/src/main/resources/messages/message_US.properties
@@ -1,11 +1,12 @@
 museum.name = Uffizi Museum
 
 index.explore = Explore
-index.login = Login
+index.login = Private Area
 index.registration = Sign Up
 index.window.title = Home - Uffizi Museum
 
 footer.home = Home
+footer.back = Back
 footer.changeLanguage.hint = Change the Language
 footer.changeLanguage.english = English
 footer.changeLanguage.italian = Italian
@@ -50,7 +51,36 @@ page.title.registrationForm = Sign Up - Uffizi Museum
 page.title.registrationSuccessfull = Successful Sign Up - Uffizi Museum
 page.adminHome.title = Private Administrator Area - Uffizi Museum
 page.defaultHome.title = Private User Area - Uffizi Museum
+page.title.successfulOperation = Success - Uffizi Museum
+page.title.addOpera = Add a Work - Uffizi Museum
+page.title.addCollezione = Add a Collection - Uffizi Museum
 
 explore.title = Explore - Uffizi Museum
+
+addOpera.formTitle = Add a Work of Art
+addOpera.titolo = *Title
+addOpera.annoRealizzazione = *Year of Creation
+addOpera.descrizione = Description
+addOpera.link = *Image URL
+addOpera.collezione = Collection
+addOpera.artista = *Artist
+addOpera.hint.titolo = Digit the Title...
+addOpera.hint.annoRealizzazione = Digit the Year of Creation...
+addOpera.hint.descrizione = Write a Description (optional)
+addOpera.hint.link = Insert the Image URL...
+addOpera.hint.collezione = Digit the Collection's Identifier... (optional)
+addOpera.hint.artista = Digit the Artist's Identifier...
+
+addCollezione.formTitle = Add a Collection
+addCollezione.nome = *Name
+addCollezione.descrizione = Description
+addCollezione.curatore = *Work of Art Curator
+addCollezione.primaOpera = *First Work of Art
+addCollezione.hint.nome = Digit the Name...
+addCollezione.hint.descrizione = Write a Description... (optional)
+addCollezione.hint.curatore = Digit the Work of Art Curator's Identifier...
+addCollezione.hint.primaOpera = Digit the First Work of Art's Identifier...
+
+successfulOperation.message = The operation was successfully executed!
 
 registration.successful.message = The registration was successful!
