Aggiunte tutte le funzioni dell'Admin
Ora mancano solo i "filtri" in explorer e eventuali bugfix

PS: a quanto pare mancano delle stringhe nei message inglesi!

--- a/progetto-museo/src/main/resources/messages/message_US.properties
+++ b/progetto-museo/src/main/resources/messages/message_US.properties
@@ -31,10 +31,19 @@ registration.hint.surname = Digit your surname...
 registration.hint.username = Digit your username...
 registration.hint.password = Digit your password...
 
+elimination.confirm = Remove
+removeOpera.id = *Id
+removeOpera.hint.id = Digit the Work's Identifier...
+
+removeCollezione.formTitle = Remove a Collection
+removeCollezione.id = *Id
+removeCollezione.hint.id = Digit the Collection's Identifier...
+
 admin.adminHome.title = Private Administrator Area
 admin.adminHome.addOpera = Add a Work
 admin.adminHome.removeOpera = Remove a Work
 admin.adminHome.addCollezione = Add a Collection
+admin.adminHome.addToCollezione = Add a Work of Art to a Collection
 admin.adminHome.removeCollezione = Remove a Collection
 admin.adminHome.addArtista = Add an Artist
 admin.adminHome.removeArtista = Remove an Artist
@@ -54,6 +63,9 @@ page.defaultHome.title = Private User Area - Uffizi Museum
 page.title.successfulOperation = Success - Uffizi Museum
 page.title.addOpera = Add a Work - Uffizi Museum
 page.title.addCollezione = Add a Collection - Uffizi Museum
+page.title.addToCollezione = Add a Work of Art to a Collection - Museo degli Uffizi
+page.title.removeOpera = Remove a Work of Art - Museo degli Uffizi
+page.title.removeCollezione = Remove a Collection - Uffizi Museum
 
 explore.title = Explore - Uffizi Museum
 
@@ -81,6 +93,31 @@ addCollezione.hint.descrizione = Write a Description... (optional)
 addCollezione.hint.curatore = Digit the Work of Art Curator's Identifier...
 addCollezione.hint.primaOpera = Digit the First Work of Art's Identifier...
 
+addToCollezione.formTitle = Add an Opera to a Collection
+addToCollezione.idCollezione = *Collection Id
+addToCollezione.idOpera = *Work of Art Id
+addToCollezione.hint.idCollezione = Digit the Collection's Identifier...
+addToCollezione.hint.idOpera = Digit the Work of Art's Identifier to add to the Collection...
+
+addArtista.formTitle = Add an Artist
+addArtista.nomeArtistico = Artistic Name
+addArtista.nome = *Name
+addArtista.cognome = *Surname
+addArtista.dataNascita = *Born Date
+addArtista.luogoNascita = *Place of Birth
+addArtista.dataMorte = Death Date
+addArtista.luogoMorte = Death Place
+addArtista.nazionalita= *Nationality
+addArtista.hint.nomeArtistico = Digit the Artistic Name... (optional)
+addArtista.hint.nome = Digit the Name...
+addArtista.hint.cognome = Digit the Surname...
+addArtista.hint.dataNascita = Select the Born Date...
+addArtista.hint.luogoNascita = Digit the Born Place...
+addArtista.hint.dataMorte = Select the Death Date... (optional)
+addArtista.hint.luogoMorte = Digit the Death Place... (optional)
+addArtista.hint.nazionalita= Digit the Nationality...
+
 successfulOperation.message = The operation was successfully executed!
+successfulOperation.backToPrivateArea = Go back to the Private Area
 
 registration.successful.message = The registration was successful!
