Fix message error

--- a/progetto-museo/src/main/resources/messages/message_US.properties
+++ b/progetto-museo/src/main/resources/messages/message_US.properties
@@ -31,13 +31,15 @@ registration.hint.surname = Digit your surname...
 registration.hint.username = Digit your username...
 registration.hint.password = Digit your password...
 
-elimination.confirm = Remove
+removeOpera.formTitle = Remove a Work of Art
 removeOpera.id = *Id
-removeOpera.hint.id = Digit the Work's Identifier...
+removeOpera.hint.id = Digit the Work of Art's Identifier...
 
 removeCollezione.formTitle = Remove a Collection
 removeCollezione.id = *Id
 removeCollezione.hint.id = Digit the Collection's Identifier...
+
+elimination.confirm = Remove
 
 admin.adminHome.title = Private Administrator Area
 admin.adminHome.addOpera = Add a Work
@@ -64,6 +66,7 @@ page.title.successfulOperation = Success - Uffizi Museum
 page.title.addOpera = Add a Work - Uffizi Museum
 page.title.addCollezione = Add a Collection - Uffizi Museum
 page.title.addToCollezione = Add a Work of Art to a Collection - Museo degli Uffizi
+page.title.addArtista = Add an Artist - Uffizi Museum
 page.title.removeOpera = Remove a Work of Art - Museo degli Uffizi
 page.title.removeCollezione = Remove a Collection - Uffizi Museum
 
