--- a/progetto-museo/src/main/resources/messages/message_US.properties
+++ b/progetto-museo/src/main/resources/messages/message_US.properties
@@ -69,8 +69,12 @@ page.title.addToCollezione = Add a Work of Art to a Collection - Museo degli Uff
 page.title.addArtista = Add an Artist - Uffizi Museum
 page.title.removeOpera = Remove a Work of Art - Museo degli Uffizi
 page.title.removeCollezione = Remove a Collection - Uffizi Museum
+page.title.explore.byArtista = Explore by Artist - Uffizi Museum
+page.title.explore.byAnnoDiRealizzazione = Explore by Year - Uffizi Museum
 
 explore.title = Explore - Uffizi Museum
+explore.goToExploreByArtista = Order by Artist
+explore.goToExploreByAnnoDiRealizzazione = Order by Year of Creation
 
 addOpera.formTitle = Add a Work of Art
 addOpera.titolo = *Title
