--- a/progetto-museo/src/main/resources/messages/message_US.properties
+++ b/progetto-museo/src/main/resources/messages/message_US.properties
@@ -26,10 +26,12 @@ registration.name = Name
 registration.surname = Surname
 registration.username = Username
 registration.password = Password
+registration.hint.password.confirm = Confirm Password
 registration.hint.name = Digit your name...
 registration.hint.surname = Digit your surname...
 registration.hint.username = Digit your username...
 registration.hint.password = Digit your password...
+registration.hint.password.confirm = Conferma your password...
 
 removeOpera.formTitle = Remove a Work of Art
 removeOpera.id = *Id
